# layerstack

./: .typos.toml  AGENTS.md  Cargo.toml  PLANS.md  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
.tickets/: lay-889c.md  lay-avtk.md  lay-nqrf.md  lay-ogax.md  lay-on89.md  lay-rsdo.md  lay-v1mn.md  lay-v4vy.md  lay-y8q1.md  lay-zjzv.md
core-spec-supplemental-release_dec2025/file_formats/tests/assets/binary/: ball.maya.usdc  gen_assetpath.usdc  (+41 more)
docs/: generic-sparse-composition.md
layerstack/: Cargo.toml  README.md
layerstack/src/: arcs.rs  array_edit.rs  asset.rs  compose.rs  dependency_map.rs  doc.rs  interner.rs  layer_stack.rs  lib.rs  listop.rs  live_stage.rs  path.rs  population.rs  prim_index.rs  property.rs  schema.rs  spec_path.rs  spline.rs  stage.rs  value_resolution.rs
layerstack/tests/: conformance.rs
layerstack_conformance/: Cargo.toml  README.md
layerstack_conformance/src/: lib.rs  listop_vectors.rs  pcp.rs  usda_min.rs  usda_real.rs  usdc.rs  usdz.rs
layerstack_conformance/tests/: composition_pcp.rs  listop_combine_chain.rs  usdc_binary.rs  usdz_package.rs
layerstack_examples/: Cargo.toml  README.md
layerstack_examples/examples/: asset_resolution.rs  instancing.rs  live_editing.rs  minimal.rs  sparse_array_edits.rs  timeline.rs  typed_schema.rs  validate_usda.rs
layerstack_examples/src/: main.rs
layerstack_usda/: Cargo.toml
layerstack_usda/src/: ast.rs  cst.rs  diagnostic.rs  emit.rs  lexer.rs  lib.rs  lower.rs  parser.rs  span.rs
layerstack_usdc/: Cargo.toml
layerstack_usdc/src/: assemble.rs  compression.rs  error.rs  header.rs  lib.rs  section.rs  toc.rs  value_rep.rs  value_type.rs
layerstack_usdz/src/: crc32.rs  error.rs  lib.rs  resolver.rs  zip.rs
wind_tunnel/: Cargo.toml
wind_tunnel/benches/: instancing.rs  sublayers.rs  variants.rs
wind_tunnel/src/: lib.rs
